--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "universal-react",
-  "license": "LicenseRef-LICENSE",
   "version": "0.0.1",
+  "license": "UNLICENSED",
   "private": true,
   "scripts": {
     "ava": "ava",
