--- a/api/package.json
+++ b/api/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "thc-api",
+  "name": "universal-react-api",
   "main": "server.js",
   "version": "0.0.1",
+  "author": "",
+  "license": "UNLICENSED",
+  "description": "",
   "engines": {
     "node": ">=6"
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "mocha --reporter spec test"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "body-parser": "^1.14.2",
-    "express": "^4.13.3",
-    "express-cassandra": "^1.0.3",
-    "jsonwebtoken": "^5.5.0",
-    "morgan": "^1.6.1"
+    "body-parser": "^1.15.2",
+    "cors": "^2.8.0",
+    "express": "^4.14.0",
+    "express-cassandra": "^1.3.0",
+    "jsonwebtoken": "^7.1.9",
+    "nconf": "^0.8.4"
+  },
+  "devDependencies": {
+    "morgan": "^1.7.0"
   }
 }
